external-crates/move/crates/move-compiler/tests/move_2024/ide_mode/struct_method_autocomplete.ide.exp
note[I15001]: IDE autocomplete
   ┌─ tests/move_2024/ide_mode/struct_method_autocomplete.move:18:23
   │
18 │         let _tmp1 = _a.;
   │                       ^ Autocompletes to: 'a::m::t0', 'a::m::t1', or 'a::m::t2'

error[E01002]: unexpected token
   ┌─ tests/move_2024/ide_mode/struct_method_autocomplete.move:18:24
   │
18 │         let _tmp1 = _a.;
   │                        ^
   │                        │
   │                        Unexpected ';'
   │                        Expected an identifier or a decimal number

note[I15001]: IDE autocomplete
   ┌─ tests/move_2024/ide_mode/struct_method_autocomplete.move:19:23
   │
19 │         let _tmp2 = _b.;
   │                       ^ Autocompletes to: 'a::m::t3', 'a::m::t4', or 'a::m::t5'

error[E01002]: unexpected token
   ┌─ tests/move_2024/ide_mode/struct_method_autocomplete.move:19:24
   │
19 │         let _tmp2 = _b.;
   │                        ^
   │                        │
   │                        Unexpected ';'
   │                        Expected an identifier or a decimal number

